# amfiteatr_classic

./: Cargo.toml
src/: common.rs  domain.rs  lib.rs  policy.rs
src/agent/: historyless.rs  legacy.rs  local_history.rs  mod.rs  own_history.rs  payoff.rs  policy.rs  prisoner.rs
src/env/: pairing.rs
