[package]
name = "amfi_classic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
amfi_core = {path = "../amfi_core"}
amfi_rl = {path = "../amfi_rl"}
tch = "0.14.0"
enum-map = "2.7.3"
log = "0.4.20"
serde = {version = "1.0.195", features = ["rc", "derive"]}
thiserror = "1.0.56"
